api responses rendered on their respective places, started creating prevent overlap logic

--- a/src/styling/Mapside.scss
+++ b/src/styling/Mapside.scss
@@ -1,9 +1,10 @@
 .MapsideWrapper {
   background-color: rgb(241, 250, 238, 0.9);
-  color: #1d3557;
+  color: #4c2e05;
+
   border-left: solid #a8dadc 0.5px;
   position: absolute;
-  width: 35rem;
+  width: 40rem;
   z-index: 1;
   right: 0%;
   min-height: 100vh;
@@ -29,10 +30,37 @@
     width: 95%;
     margin: 0 auto;
 
+    .commoncrime {
+      h4 {
+        color: #1d3557;
+        font-weight: 300;
+      }
+    }
+    .LastReported {
+      margin-bottom: 0.1rem;
+      background-color: rgba(249, 87, 56, 0.04);
+      color: #1d3557;
+      padding-top: 0.3rem;
+      padding-bottom: 0.3rem;
+      .LastReportedDescription {
+        margin-bottom: 0rem;
+      }
+    }
+
+    .PerPeople {
+      background-color: #f95738;
+      color: white;
+      width: max-content;
+      padding: 0.3rem 0.6rem 0.3rem 0.5rem;
+    }
+
     h2,
     h3 {
       opacity: 1;
       transition: all 0.35s ease-in;
+      margin-bottom: 0.2rem;
+      margin-top: 0.2rem;
+
       &:first-child {
         margin-bottom: 0.3rem;
         margin-left: 0.2rem;
